# Timmy-time-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DECISIONS.md  DEVELOPMENT.md  Darlings_to_Kill.md  Dockerfile  Dockerfile.dev  Dockerfile.ollama  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY.md  Makefile  Makefile.dev  PLAN.md  QUALITY_REVIEW_REPORT.md  README.md  REFACTORING_PLAN.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md  TIMMY_IDENTITY.md  WORKSET_PLAN.md  WORKSET_PLAN_PHASE2.md  alembic.ini  auth-gate.py  coverage.xml  docker-compose.dev-optimized.yml  docker-compose.dev.yml  docker-compose.enhanced.yml  docker-compose.logging.yml  docker-compose.microservices.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  final_report.md  interview_timmy.py  interview_transcript.txt  (+10 more)
.github/workflows/: tests.yml
.handoff/: CHECKPOINT.md  CONTINUE.md  TODO.md  bootstrap.sh  resume.sh
config/: providers.yaml
data/: scripture.db-shm  scripture.db-wal
data/self_modify_reports/: 20260225_223632_add_docstring.md  20260225_223632_break_it.md  20260225_223632_do_something_vague.md  20260225_223632_fix_foo.md  20260225_223632_fix_foo_important_correction_from_previ.md  20260225_224732_fix_foo.md  20260225_224733_add_docstring.md  20260225_224733_break_it.md  20260225_224733_do_something_vague.md  20260225_224734_fix_foo.md  20260225_224734_fix_foo_important_correction_from_previ.md  20260225_225049_add_docstring.md  20260225_225049_break_it.md  20260225_225049_do_something_vague.md  20260225_225049_fix_foo.md  20260225_225049_fix_foo_important_correction_from_previ.md  20260225_230304_fix_foo.md  20260225_230305_add_docstring.md  20260225_230305_break_it.md  20260225_230305_do_something_vague.md  20260225_230305_fix_foo_important_correction_from_previ.md  20260225_230306_fix_foo.md  20260225_230553_add_docstring.md  20260225_230553_break_it.md  20260225_230553_do_something_vague.md  20260225_230554_fix_foo.md  20260225_230554_fix_foo_important_correction_from_previ.md  20260225_231440_add_docstring.md  20260225_231440_break_it.md  20260225_231440_do_something_vague.md  20260225_231440_fix_foo.md  20260225_231440_fix_foo_important_correction_from_previ.md  20260225_231441_fix_foo.md  20260225_231645_add_docstring.md  20260225_231645_break_it.md  20260225_231645_do_something_vague.md  20260225_231645_fix_foo.md  20260225_231645_fix_foo_important_correction_from_previ.md  20260225_232402_add_docstring.md  20260225_232402_break_it.md  (+25 more)
deploy/: Caddyfile  cloud-init.yaml  setup.sh  timmy.service
deploy/digitalocean/: create-droplet.sh
deploy/elk/: elasticsearch.yml  kibana.yml  logstash.conf
docker/: Dockerfile.agent  Dockerfile.dashboard  Dockerfile.dev  Dockerfile.ollama  Dockerfile.openfang  Dockerfile.test
docker/scripts/: init-ollama.sh
docs/: ASCENSION.md  AUDIT_REPORT.md  CHANGELOG_2025-02-27.md  CHANGELOG_2026-02-26.md  IMPLEMENTATION_SUMMARY.md  PLAN_NOSTR_AGENT_MARKETPLACE.md  QUALITY_ANALYSIS_v2.md  REFACTORING_PLAN.md  REVELATION_PLAN.md  ROADMAP.md  SECURITY.md  SOVEREIGNTY_AUDIT.md  architecture-v2.md  evaluation-vibeship-spark.md  index.html
docs/adr/: 017-event-logging.md  018-lightning-ledger.md  019-semantic-memory.md  020-cascade-router-integration.md  021-self-upgrade-approval-queue.md  022-real-time-activity-feed.md
hands/ledger/: HAND.toml  SYSTEM.md
hands/oracle/: HAND.toml  SYSTEM.md
hands/scout/: HAND.toml  SYSTEM.md
hands/scribe/: HAND.toml  SYSTEM.md
hands/sentinel/: HAND.toml  SYSTEM.md
hands/weaver/: HAND.toml  SYSTEM.md
memory/self/: identity.md  methodology.md  user_profile.md
migrations/: env.py
migrations/versions/: 0093c15b4bbf_create_task_and_journal_entry_tables.py
mobile-app/: README.md  app.config.ts  design.md  package.json  theme.config.js  todo.md
mobile-app/app/: _layout.tsx
mobile-app/components/: chat-bubble.tsx  chat-header.tsx  chat-input.tsx  empty-chat.tsx  image-viewer.tsx  typing-indicator.tsx
mobile-app/lib/: chat-store.tsx
mobile-app/server/: chat.ts
mobile-app/shared/: types.ts
mobile-app/tests/: chat.test.ts
scripts/: activate_self_tdd.sh  add_pytest_markers.py  apply_security_fixes.py  fix_marker_syntax.py  pre-commit-hook.sh  pre_commit_checks.py
src/: config.py
src/agent_core/: interface.py  ollama_adapter.py
src/agents/: __init__.py  base.py  echo.py  forge.py  helm.py  quill.py  seer.py  timmy.py
src/brain/: __init__.py  client.py  embeddings.py  identity.py  memory.py  schema.py  worker.py
src/chat_bridge/: __init__.py  base.py  invite_parser.py  registry.py
src/creative/: CLAUDE.md  __init__.py  assembler.py  director.py
src/dashboard/: __init__.py  app.py  app_backup.py  app_optimized.py  store.py  templating.py
src/events/: broadcaster.py  bus.py
src/hands/: __init__.py  models.py  registry.py  runner.py  scheduler.py
src/infrastructure/: CLAUDE.md  __init__.py  error_capture.py
src/integrations/: CLAUDE.md  __init__.py
src/lightning/: CLAUDE.md  __init__.py  base.py  factory.py  ledger.py  lnd_backend.py  mock_backend.py
static/: local_llm.js  notifications.js  style.css
tests/: conftest.py  conftest_markers.py  test_agent.py  test_agentic_loop.py  test_autonomy_phase1.py  test_briefing.py  test_celery_integration.py  test_chat_bridge.py  test_cli.py  test_coordinator.py  test_creative_director.py  test_creative_route.py  test_dashboard.py  test_dashboard_routes.py  test_discord_vendor.py  test_functional_mcp.py  test_git_safety.py  test_git_safety_errors.py  test_git_tools.py  test_hands.py  test_hands_git.py  test_hands_oracle_sentinel.py  test_hands_shell.py  test_ledger.py  test_lightning_interface.py  test_lnd_backend.py  test_mcp_bootstrap.py  test_mcp_discovery.py  test_mobile_scenarios.py  test_openfang_client.py  test_openfang_config.py  test_openfang_executor.py  test_openfang_tools.py  test_paperclip_config.py  test_performance_optimizations.py  test_reflection.py  test_router_api.py  test_router_cascade.py  test_scary_paths.py  test_scripture.py  (+23 more)
~/: .magicaltouch
(+436 files in other folders)
