[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "timmy-time"
version = "1.0.0"
description = "Mission Control for sovereign AI agents"
readme = "README.md"
license = "MIT"
packages = [
    { include = "config.py", from = "src" },
    { include = "brain", from = "src" },
    { include = "dashboard", from = "src" },
    { include = "infrastructure", from = "src" },
    { include = "integrations", from = "src" },
    { include = "spark", from = "src" },
    { include = "timmy", from = "src" },
    { include = "timmy_serve", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
# ── Core — pinned for reproducible builds ──────────────────────────────────
agno = { version = "~2.5.5", extras = ["sqlite"] }
ollama = "~0.6.1"
openai = "~2.24.0"
fastapi = "~0.134.0"
uvicorn = { version = "~0.41.0", extras = ["standard"] }
jinja2 = "~3.1.6"
httpx = "~0.28.1"
python-multipart = "~0.0.22"
aiofiles = "~25.1.0"
typer = "~0.24.1"
rich = "~14.3.3"
pydantic-settings = "~2.13.1"
websockets = "~16.0"
GitPython = "~3.1.46"
moviepy = "~2.2.1"
requests = "~2.32.5"
sentence-transformers = "~5.2.3"  # Local embeddings for brain
numpy = "~2.4.2"
# ── Optional extras ────────────────────────────────────────────────────────
redis = { version = ">=5.0.0", optional = true }
python-telegram-bot = { version = ">=21.0", optional = true }
"discord.py" = { version = ">=2.3.0", optional = true }
airllm = { version = ">=2.9.0", optional = true }
pyttsx3 = { version = ">=2.90", optional = true }
pytest = { version = "~9.0.2", optional = true }
pytest-asyncio = { version = "~1.3.0", optional = true }
pytest-cov = { version = "~7.0.0", optional = true }
pytest-timeout = { version = "~2.4.0", optional = true }
selenium = { version = ">=4.20.0", optional = true }
pytest-randomly = { version = "~4.0.1", optional = true }
pytest-xdist = { version = "~3.8.0", optional = true }

[tool.poetry.extras]
telegram = ["python-telegram-bot"]
discord = ["discord.py"]
bigbrain = ["airllm"]
voice = ["pyttsx3"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "pytest-randomly", "pytest-xdist", "selenium"]

[tool.poetry.group.dev.dependencies]
pytest = "~9.0.2"
pytest-asyncio = "~1.3.0"
pytest-cov = "~7.0.0"
pytest-timeout = "~2.4.0"
selenium = ">=4.20.0"
pytest-randomly = "~4.0.1"
pytest-xdist = "~3.8.0"

[tool.poetry.scripts]
timmy = "timmy.cli:main"
timmy-serve = "timmy_serve.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --timeout=30"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may use SQLite)",
    "functional: Functional tests (real HTTP requests, no mocking)",
    "e2e: End-to-end tests (full system, may be slow)",
    "dashboard: Dashboard route tests",
    "slow: Tests that take >1 second",
    "selenium: Requires Selenium and Chrome (browser automation)",
    "docker: Requires Docker and docker-compose",
    "ollama: Requires Ollama service running",
    "skip_ci: Skip in CI environment (local development only)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
# Fail CI if coverage drops below this threshold
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
